--- a/metamate/pkg/v0/communication/server/explorer/public/index.html
+++ b/metamate/pkg/v0/communication/server/explorer/public/index.html
@@ -11,9 +11,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Explore MetaMate with GraphQL"
     />
-    <link rel="apple-touch-icon" href="/static/logo192.png" />
+    <link rel="apple-touch-icon" href="/static/android-icon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MetaMate - Explorer</title>
   </head>
