--- a/metamate/pkg/v0/communication/servers/explorer/public/index.html
+++ b/metamate/pkg/v0/communication/servers/explorer/public/index.html
@@ -6,14 +6,14 @@
       window.defaultQuery="{{ .DefaultQuery }}";
     </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="/static/favicon.ico" />
+    <link rel="icon" href="/static/logo/blue/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Explore MetaMate with GraphQL"
     />
-    <link rel="apple-touch-icon" href="/static/android-icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/static/logo/blue/android-icon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MetaMate - Explorer</title>
   </head>
