--- a/metamate/pkg/v0/communication/servers/explorer/public/index.html
+++ b/metamate/pkg/v0/communication/servers/explorer/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script>
-      window.graphqlEndpoint="http://" + window.location.hostname + "{{ .GraphqlPath }}";
+      window.graphqlEndpoint=window.location.origin + "{{ .GraphqlPath }}";
       window.defaultQuery="{{ .DefaultQuery }}";
     </script>
     <meta charset="utf-8" />
